Env setting for region

--- a/src/listener/serverless.template
+++ b/src/listener/serverless.template
@@ -21,6 +21,11 @@
                             "BatchSize": 10
                         }
                     }
+                },
+                "Environment": {
+                    "Variables": {
+                        "SESRegion": "us-east-1"
+                    }
                 }
             }
         },
