--- a/src/listener/serverless.template
+++ b/src/listener/serverless.template
@@ -1,30 +1,12 @@
 {
-  "AWSTemplateFormatVersion" : "2010-09-09",
-  "Transform" : "AWS::Serverless-2016-10-31",
-  "Description" : "An AWS Serverless Application that uses the ASP.NET Core framework running in Amazon Lambda.",
+  "AWSTemplateFormatVersion": "2010-09-09",
+  "Transform": "AWS::Serverless-2016-10-31",
+  "Description": "Sends emails",
 
-  "Parameters" : {
-    "ShouldCreateBucket" : {
-      "Type" : "String",        
-      "AllowedValues" : ["true", "false"],
-      "Description" : "If true then the S3 bucket that will be proxied will be created with the CloudFormation stack."
-    },  
-    "BucketName" : {
-        "Type" : "String",
-        "Description" : "Name of S3 bucket that will be proxied. If left blank a name will be generated.",
-        "MinLength" : "0"
-    }
-  },
+  "Resources": {
 
-  "Conditions" : {
-    "CreateS3Bucket" : {"Fn::Equals" : [{"Ref" : "ShouldCreateBucket"}, "true"]},
-    "BucketNameGenerated" : {"Fn::Equals" : [{"Ref" : "BucketName"}, ""]}
-  },
-
-  "Resources" : {
-
-    "AspNetCoreFunction" : {
-      "Type" : "AWS::Serverless::Function",
+    "listenerFunction": {
+      "Type": "AWS::Serverless::Function",
       "Properties": {
         "Handler": "listener::listener.LambdaEntryPoint::FunctionHandlerAsync",
         "Runtime": "dotnetcore2.1",
@@ -32,11 +14,9 @@
         "MemorySize": 256,
         "Timeout": 30,
         "Role": null,
-        "Policies": [ "AWSLambdaFullAccess" ],
-        "Environment" : {
-          "Variables" : {
-            "AppS3Bucket" : { "Fn::If" : ["CreateS3Bucket", {"Ref":"Bucket"}, { "Ref" : "BucketName" } ] }
-          }
+        "Policies": ["AWSLambdaVPCAccessExecutionRole"],
+        "Environment": {
+          "Variables": {}
         },
         "Events": {
           "PutResource": {
@@ -50,22 +30,35 @@
       }
     },
 
-    "Bucket" : {
-        "Type" : "AWS::S3::Bucket",
-        "Condition" : "CreateS3Bucket",
-        "Properties" : {
-            "BucketName" : { "Fn::If" : ["BucketNameGenerated", {"Ref" : "AWS::NoValue" }, { "Ref" : "BucketName" } ] }
+    "topic": {
+      "Type": "AWS::SNS::Topic",
+      "Properties": {
+        "DisplayName": "mail-queue",
+        "TopicName": "mail-queue"
+      }
+    },
+
+    "listenerSubscription": {
+      "Type": "AWS::SNS::Subscription",
+      "Properties": {
+        "Endpoint": {
+          "Fn::Sub": "https://${ServerlessRestApi}.execute-api.${AWS::Region}.amazonaws.com/Prod/"
+        },
+        "Protocol": "https",
+        "TopicArn": {
+          "Ref": "topic"
         }
+      }
     }
+
   },
 
-  "Outputs" : {
-    "ApiURL" : {
-        "Description" : "API endpoint URL for Prod environment",
-        "Value" : { "Fn::Sub" : "https://${ServerlessRestApi}.execute-api.${AWS::Region}.amazonaws.com/Prod/" }
-    },
-    "S3ProxyBucket" : {
-        "Value" : { "Fn::If" : ["CreateS3Bucket", {"Ref":"Bucket"}, { "Ref" : "BucketName" } ] }
+  "Outputs": {
+    "ApiURL": {
+      "Description": "API endpoint URL for Prod environment",
+      "Value": {
+        "Fn::Sub": "https://${ServerlessRestApi}.execute-api.${AWS::Region}.amazonaws.com/Prod/"
+      }
     }
   }
 }
