--- a/src/listener/listener.csproj
+++ b/src/listener/listener.csproj
@@ -8,10 +8,9 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" Version="2.1.0" />
-
-    <PackageReference Include="AWSSDK.S3" Version="3.3.18.6" />
     <PackageReference Include="AWSSDK.Extensions.NETCore.Setup" Version="3.3.6" />
     <PackageReference Include="Amazon.Lambda.AspNetCoreServer" Version="2.1.0" />
+	  <PackageReference Include="AWSSDK.SimpleEmail" Version="3.3.7.18" />
   </ItemGroup>
 
 </Project>
