--- a/test/listener.Tests/listener.Tests.csproj
+++ b/test/listener.Tests/listener.Tests.csproj
@@ -14,6 +14,11 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="sample-subscription-confirmation.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" Version="2.1.0"/>
     <PackageReference Include="Amazon.Lambda.Core" Version="1.0.0"/>
     <PackageReference Include="Amazon.Lambda.TestUtilities" Version="1.0.0"/>
