--- a/test/listener.Tests/listener.Tests.csproj
+++ b/test/listener.Tests/listener.Tests.csproj
@@ -17,6 +17,9 @@
     <Content Include="sample-subscription-confirmation.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="sample-notification.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" Version="2.1.0"/>
