--- a/test/listener.Tests/listener.Tests.csproj
+++ b/test/listener.Tests/listener.Tests.csproj
@@ -28,9 +28,9 @@
     <PackageReference Include="Amazon.Lambda.APIGatewayEvents" Version="1.1.3"/>
     <PackageReference Include="AWSSDK.Extensions.NETCore.Setup" Version="3.3.6"/>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.5.0"/>
-    <PackageReference Include="xunit" Version="2.3.1"/>
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.3.1"/>
     <PackageReference Include="Moq" Version="4.10.1"/>
+    <PackageReference Include="MSTest.TestAdapter" Version="1.3.2" />
+    <PackageReference Include="MSTest.TestFramework" Version="1.3.2" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\src\listener\listener.csproj"/>
