--- a/src/listener/serverless.template
+++ b/src/listener/serverless.template
@@ -14,7 +14,7 @@
         "MemorySize": 256,
         "Timeout": 30,
         "Role": null,
-        "Policies": ["AWSLambdaVPCAccessExecutionRole"],
+        "Policies": ["AmazonSESFullAccess"],
         "Environment": {
           "Variables": {
             "SESRegion": "us-east-1"
