--- a/src/listener/appsettings.json
+++ b/src/listener/appsettings.json
@@ -2,6 +2,7 @@
   "Lambda.Logging": {
     "LogLevel": {
       "Default": "Debug",
+      "System": "Information",
       "Microsoft": "Information"
     }
   }
